--- a/aufgabe4-css/style.css
+++ b/aufgabe4-css/style.css
@@ -7,7 +7,7 @@ header
     font-family: Arial, Helvetica, sans-serif;
     margin: 10px;
     border-radius: 25px; 
-   
+   background-image:url("istockphoto-1129050990-612x612.jpg");
 
     border: 20px solid white;
     
@@ -16,6 +16,11 @@ header
 body
 {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: black;
+    background-size: 100%;
+    background-position: center;
+    background-attachment: fixed;
+box-shadow: 0px 2px 4px rgba(0,0,0,0.144);
 }
 h1
 {
@@ -60,6 +65,10 @@ image
     font-size: 40px;
     border: 10px solid white;
     border-radius: 7px;
+}
+.nav a:hover
+{
+    color: blue;
 }
 
 p
