--- a/aufgabe4-css/style.css
+++ b/aufgabe4-css/style.css
@@ -40,28 +40,27 @@ footer {
     border-radius: 15px;
     border: 10px solid white;
     background-image: url("istockphoto-1129050990-612x612.jpg");
-position: center;
-   
+    position: center;
+
 }
 
 
-table
-{
-font-size: 25px;
-text-align: center;
-margin-bottom: 25px;
+table {
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 25px;
 }
-th
-{
-font-size: 30px;
-height: 100;
-font-weight: normal;
+
+th {
+    font-size: 23px;
+    height: 100;
+    font-weight: normal;
 }
-.tres
-{
-height: 20px;   
-font-size: 30px;
-position: inherit;
+
+.tres {
+    height: 20px;
+    font-size: 30px;
+    position: inherit;
 }
 
 
@@ -99,45 +98,40 @@ p {
 
 ul {
     font-size: 20px;
-color: white;
+    color: white;
 
 
 }
-li
-{
+
+li {
     list-style: none;
 }
-form
-{
+
+form {
     text-align: center;
-    
-}
-
-input
-
-{
-font-size: 40px;
-color: black;
-border-radius: 10px;
-width: 60%;
 
 }
-.message
-{
+
+input {
+    font-size: 40px;
+    color: black;
+    border-radius: 10px;
+    width: 60%;
+
+}
+
+.message {
 
     height: 100px;
 }
 
-.button
-{
-padding-right: 10px;
-width: 150px;
-padding-top: 8px;
+.button {
+    padding-right: 10px;
+    width: 150px;
+    padding-top: 8px;
 }
 
-#Logo
-
-{
+#Logo {
     float: right;
     margin-right: 260px;
     margin-top: 25px;
@@ -146,21 +140,47 @@ padding-top: 8px;
     border-bottom: none;
 }
 
-p
-{
+p {
     color: white;
 }
 
-h2
-{
+h2 {
     color: white;
 }
-h1
-{
+
+h1 {
     color: white;
-   text-align: center;
+    text-align: center;
 }
-h3
-{
+
+h3 {
     color: white;
 }
+
+.zoom:hover {
+    transform: scale(1.3);
+    opacity: 1;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0.1s;
+
+}
+
+.zoom {
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    opacity: 0.5;
+}
+
+.icon:hover {
+    transform: scale(1.3);
+    opacity: 1;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
+}
+
+.icon {
+    opacity: 0.5;
+
+}
+
