--- a/aufgabe8/drum.css
+++ b/aufgabe8/drum.css
@@ -37,19 +37,20 @@ width: 150px;
 height: 150px;
 border-radius: 9px;
 color: aliceblue;
+box-shadow: 3px 3px #Ffffff;
 }
 
 .button:hover
 {
     color: aliceblue;
-    background-color: aqua;
+    background-color: #00FFFF;
 }
 
 .td:hover
 {
     padding:5px;
     color: aliceblue;
-    background-color: aqua;
+    background-color: #00FFFF;
 }
 
 h1
@@ -59,7 +60,7 @@ h1
     font-size: 70px;
     text-align: center;
     font-family: monospace;
-}
+    box-shadow: 3px 3px #Ffffff;
 
 .play
 
