--- a/aufgabe8/drum.css
+++ b/aufgabe8/drum.css
@@ -1,78 +1,94 @@
-body
-{
+body {
 
-
-justify-content:center;
-align-items:center ;
-height: 100vh;
-margin: 0 auto;
-background-color: #000000;
+text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0 auto;
+    background-color: #000000;
 }
 
-.hihat,.kick,.laugh,.snare,.e,.a,.c,.f,.d
-
-{
-background-color: #00ffff;
-font: size 30px; 
-font-family: monospace;
-color: #000000;
-background-color: #Ffffff;
-transition-duration: 0.5s;
-}
-
-  
-
-#button
-{
-margin: 0 auto;
-margin-top: +7%;
-width: 150px;
-height: 150px;
-transition-duration: 0.5s;
+.hihat,
+.kick,
+.laugh,
+.snare,
+.e,
+.a,
+.c,
+.f,
+.d {
+    background-color: #00ffff;
+    font: size 30px;
+    font-family: monospace;
+    color: #000000;
+    background-color: #Ffffff;
+    transition-duration: 0.3s;
 }
 
 
-button
-{
-width: 150px;
-height: 150px;
-border-radius: 9px;
-color: aliceblue;
-box-shadow: 3px 3px #Ffffff;
-transition-duration: 0.5s;
+
+#button {
+    margin: 0 auto;
+    margin-top: +7%;
+    width: 150px;
+    height: 150px;
+    transition-duration: 0.3s;
 }
 
-button:hover
-{
+
+button {
+    width: 150px;
+    height: 150px;
+    border-radius: 9px;
+    color: aliceblue;
+    box-shadow: 3px 3px #Ffffff;
+    transition-duration: 0.3s;
+}
+
+button:hover {
     color: aliceblue;
     background-color: #00FFFF;
 }
 
 
 
-h1
-
-{
-    color:#Ffffff ;
+h1 {
+    color: #Ffffff;
     font-size: 70px;
     text-align: center;
     font-family: monospace;
     box-shadow: 3px 3px #Ffffff;
+    box-shadow: 3px 3px #808080;
+border-color: #00FFFF;
 }
-   
+
+
+
+.play-button {
     
+    align-items: center;
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 9px;
+    color: #808080;
+    box-shadow: 3px 3px #808080;
+    transition-duration: 0.3s;
+    border-color: #00FFFF;  
 
-.play-button
+}
 
+.remix-button
 {
-   margin-top: 25px;
-   align-items: center;
-   text-align: center;
-   width: 150px;
-height: 150px;
+
+align-items: center;
+text-align: center;
+width: 100px;
+height: 100px;
 border-radius: 9px;
-color: aliceblue;
-box-shadow: 3px 3px #Ffffff;
-transition-duration: 0.5s;
-   
+color: #808080;
+box-shadow: 3px 3px #808080;
+transition-duration: 0.3s;
+border-color: #00FFFF;
+
 }
