--- a/aufgabe8/drum.css
+++ b/aufgabe8/drum.css
@@ -64,7 +64,7 @@ border-color: #00FFFF;
 
 
 
-.play-button {
+#play-button {
     
     align-items: center;
     text-align: center;
@@ -78,7 +78,7 @@ border-color: #00FFFF;
 
 }
 
-.remix-button
+#remix-button
 {
 
 align-items: center;
@@ -91,4 +91,25 @@ box-shadow: 3px 3px #808080;
 transition-duration: 0.3s;
 border-color: #00FFFF;
 
+}
+
+#playstop-button
+ {
+    background-color: #00FFFF;
+    margin-top: 40px;
+    border-radius: 90px;
+    height: 100px;
+    background-image: "fa-solid fa-play";
+}
+
+#playstop-button.active {
+    background-image: "fa-solid fa-pause";
+    background-color: #00FFFF;
+}
+
+#remix-button {
+    background-color: #00FFFF;
+    margin-top: 40px;
+    border-radius: 90px;
+    height: 100px;
 }
