--- a/Aufgabe10/style10.css
+++ b/Aufgabe10/style10.css
@@ -1,122 +1,114 @@
-body
- {
-    margin: 0px;
-    background-color: rgba(215, 215, 215, 1);
-    background-image: none;
-    position: static;
-    left: auto;
-    width: 768px;
-    margin-left: 0;
-    margin-right: 0;
-    text-align: center;
-    
-}
-h1
-{
-
-color: black;
-font-size: 60px;
-font-family: Arial, Helvetica, sans-serif;
 
 
-
-}
-ul li
-
-{
-    text-align: left;
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    background: #eee;
-    font-size: 18px;
-    transition: 0.2s;
-    list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-ul {
-    margin: 0;
-    padding: 0;
-  }
-  ul li:hover {
-    background: #ddd;
+    body {
+      
+      font-family: Arial, Helvetica, sans-serif;
+      min-height: 710px;
+      background-color: rgb(6, 54, 137);
   }
   
-  ul li.checked
-    {
-    background: #888;
-    color: #fff;
-    text-decoration: line-through;
-  }
-  ul li.checked::before 
-  {
-    content: '';
-    position: absolute;
-    border-color: #fff;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    top: 10px;
-    left: 16px;
-    transform: rotate(45deg);
-    height: 15px;
-    width: 7px;
-  }
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 13px 15px 13px 15px;
-}
-
-.header:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-
-input {
-  margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
-}
-
-.close:hover {
-  background-color: #448ae1;
-  color: white;
-}
-
-
-  .header {
-    background-color: #8f8585;
-    padding: 30px 40px;
-    color: white;
-    text-align: center;
-  }  
-
-.addbutton {
-    padding: 10px;
-    width: 25%;
-    background: #fff;
-    color: rgb(48, 47, 47);
-    float: left;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 0;
+  .app {
+      width: 500px;
+      margin-left: auto;
+      margin-right: auto;
   }
   
-  .addbutton:hover
-   {
-    background-color: #bbb;
+  h1 {
+      text-align: center;
+      font-size: 70px;
+      color: rgb(255, 255, 255);
   }
+  
+  h4 {
+      text-align: center;
+      font-size: 18px;
+      color: rgb(255, 255, 255);
+  }
+  
+  .task {
+      position: absolute;
+      margin-top: 60px;
+      margin-left: 60px;
+  }
+  
+  input {
+      font-size: 18px;
+      width: 350px;
+      height: 30px;
+      border: 0;
+      border-radius: 10px;
+      padding: 12px;
+  }
+  
+  p {
+      position: absolute;
+      margin-top: 25px;
+      margin-left: 180px;
+  }
+  
+  #btn {
+      font-size: 30px;
+      position: absolute;
+      margin-top: 10px;
+      margin-left: 10px;
+  }
+  
+  
+  #eingabe {
+      position: absolute;
+      font-size: 18px;
+      margin-top: 10px;
+      margin-left: 50px;
+  }
+  
+  .fa-trash {
+      font-size: 20px;
+      position: absolute;
+      margin-left: 320px;
+      margin-top: 10px;
+      opacity: 50%;
+  }
+  
+  .fa-circle {
+      font-size: 20px;
+      position: absolute;
+      margin-top: 10px;
+      margin-left: 10px;
+      opacity : 50%;
+  }
+  
+  .fa-check-circle {
+      font-size: 20px;
+      position: absolute;
+      margin-top: 10px;
+      margin-left: 10px;
+      opacity: 100%;
+  }
+  
+  
+  
+  .addline {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  }
+  
+  #addtask {
+      width: 250px;
+      border-style: solid;
+      text-align: center;
+  }
+  
+  #button {
+      width: 50px;
+      font-size: 35px;
+  }
+  #neuesDiv {
+      font-size: 15px;
+      float: center;
+      margin-top: 10px;
+      border-radius: 10px;
+      width: 350px;
+      height: 40px;
+  }
+  
