--- a/Aufgabe10/style10.css
+++ b/Aufgabe10/style10.css
@@ -1,114 +1,88 @@
+body {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: large;
+    background: rgb(12, 229, 245);
+}
 
+main {
+    width: 500px;
+    margin: 0 auto;
+    text-align: center;
+}
 
-    body {
-      
-      font-family: Arial, Helvetica, sans-serif;
-      min-height: 710px;
-      background-color: rgb(6, 54, 137);
-  }
-  
-  .app {
-      width: 500px;
-      margin-left: auto;
-      margin-right: auto;
-  }
-  
-  h1 {
-      text-align: center;
-      font-size: 70px;
-      color: rgb(255, 255, 255);
-  }
-  
-  h4 {
-      text-align: center;
-      font-size: 18px;
-      color: rgb(255, 255, 255);
-  }
-  
-  .task {
-      position: absolute;
-      margin-top: 60px;
-      margin-left: 60px;
-  }
-  
-  input {
-      font-size: 18px;
-      width: 350px;
-      height: 30px;
-      border: 0;
-      border-radius: 10px;
-      padding: 12px;
-  }
-  
-  p {
-      position: absolute;
-      margin-top: 25px;
-      margin-left: 180px;
-  }
-  
-  #btn {
-      font-size: 30px;
-      position: absolute;
-      margin-top: 10px;
-      margin-left: 10px;
-  }
-  
-  
-  #eingabe {
-      position: absolute;
-      font-size: 18px;
-      margin-top: 10px;
-      margin-left: 50px;
-  }
-  
-  .fa-trash {
-      font-size: 20px;
-      position: absolute;
-      margin-left: 320px;
-      margin-top: 10px;
-      opacity: 50%;
-  }
-  
-  .fa-circle {
-      font-size: 20px;
-      position: absolute;
-      margin-top: 10px;
-      margin-left: 10px;
-      opacity : 50%;
-  }
-  
-  .fa-check-circle {
-      font-size: 20px;
-      position: absolute;
-      margin-top: 10px;
-      margin-left: 10px;
-      opacity: 100%;
-  }
-  
-  
-  
-  .addline {
-  display: flex;
-  justify-content: space-between;
-  height: 50px;
-  }
-  
-  #addtask {
-      width: 250px;
-      border-style: solid;
-      text-align: center;
-  }
-  
-  #button {
-      width: 50px;
-      font-size: 35px;
-  }
-  #neuesDiv {
-      font-size: 15px;
-      float: center;
-      margin-top: 10px;
-      border-radius: 10px;
-      width: 350px;
-      height: 40px;
-  }
-  
+#counter {
+    color: rgb(108, 105, 105);
+}
+
+.inputGroup {
+    position: relative;
+}
+#inputTodo {
+    background: white;
+    font-size: 20px;
+    padding: 20px 50px;
+    border: none;
+    width: 100%;
+    height: 64px;
+    box-sizing: border-box;
+    border-bottom: 1px solid grey;
+    outline: none;
+}
+
+#addButton {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 30px;
+    background: none;
+    border: none;
+    outline: none;
+    color: grey;
+    cursor: pointer;
+}
+#addButton:hover {
+    color: black;
+}
+
+#todos {
+    box-shadow: 0 1px 5px rgba(19, 19, 19, 0.42);
+}
+
+.todo {
+    text-align: left;
+    position: relative;
+    font-size: 20px;
+    padding: 20px 50px;
+    background: white;
+    border-bottom: 1px solid grey;
+}
+
+.check {
+    position: absolute;
+    left: 10px;
+    top: 15px;
+    border: 1px solid rgb(56, 54, 54);
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+}
+.check i {
+    position: relative;
+    left: 5px;
+    top: 5px;
+}
+.check.false i {
+    display: none;
+}
+
+.trash {
+    position: absolute;
+    right: 25px;
+    top: 20px;
+    color: grey;
+    cursor: pointer;
+}
+
+.trash:hover {
+    color: black;
+}
